# mathlib

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: config.cmake.in
include/: mathlib.h
src/: mathlib.cpp
